Fiuxing spacing issue

--- a/static/interactive_map.css
+++ b/static/interactive_map.css
@@ -98,4 +98,6 @@ a {
 
 p {
     font-size: 35px;
+    padding: 0px;
+    margin: 0px;
 }
